--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,13 @@ python:
 
 matrix:
   include:
-  - python: 3.7
-    dist: xenial
-    sudo: true
+    - python: 3.7
+      dist: xenial
+      sudo: true
+
+branches:
+  except:
+    - /^v[0-9]+\.[0-9]+\.[0-9]+$/
 
 install:
   - pip install -r test-requirements.txt
