--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,10 @@ environment:
     - PYTHON: "C:\\Python37"
     - PYTHON: "C:\\Python37-x64"
 
+branches:
+  except:
+    - /^v[0-9]+\.[0-9]+\.[0-9]+$/
+
 install:
   - "%PYTHON%\\Scripts\\pip.exe install -r test-requirements.txt"
 
